# DoomTAK

./: .gitignore  CHANGELOG.txt  README.md  VERSION.txt
.github/workflows/: main.yml
espresso/: ATAKPluginTests-debug.aar  testSetup.gradle
plugin/DoomTAK/app/: build.gradle  proguard-gradle-repackage.txt
plugin/DoomTAK/app/src/main/: AndroidManifest.xml
plugin/DoomTAK/app/src/main/assets/: fragment_shader.glsl  plugin.xml  vertex_shader.glsl
plugin/DoomTAK/app/src/main/cpp/: Android.mk  CMakeLists.txt  doomtak.cpp  doomtak.h  javah.properties  logger.h
plugin/DoomTAK/app/src/main/cpp/DOOM/: DOOM.c  DOOM.h  d_englsh.h  d_main.c  d_ticcmd.h  g_game.c  i_sound.c  i_system.c  m_argv.c  m_menu.c
plugin/DoomTAK/app/src/main/java/com/atakmap/android/doomtak/: DoomTakDropDownReceiver.java  DoomTakGLRenderer.java  DoomTakMapComponent.java  JoystickView.java
plugin/DoomTAK/app/src/main/java/com/atakmap/android/doomtak/audio/: DoomTakMusicPlayer.java  DoomTakSoundPlayer.java
plugin/DoomTAK/app/src/main/java/com/atakmap/android/doomtak/input/: GyroMouseListener.java
plugin/DoomTAK/app/src/main/java/com/atakmap/android/doomtak/plugin/: DoomTakLifecycle.java  DoomTakTool.java  PluginNativeLoader.java
plugin/DoomTAK/app/src/main/res/color/: button_colors.xml  circular_button_colors.xml
plugin/DoomTAK/app/src/main/res/drawable/: circular_button.xml  explosion_24.xml  touch_app_24.xml
plugin/DoomTAK/app/src/main/res/layout/: main_layout.xml
plugin/DoomTAK/app/src/main/res/values/: strings.xml
(+1 files in other folders)
